-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.2.0-rc1
-
Windows 10
msvc2013 32bit 5.8 RC package
msvc2015 32bit 5.8 RC package
-
ec50c146b3bff251d92e1bf106f23ac4e8a08e46
Open in Command Prompt Here does not work in the 5.8 RC package.
In the standalone version it does work.
We can reproduce this on two machines and with two packages.
- resulted from
-
QTBUG-57687 [REG 5.7.1 -> 5.8.0] QProcess::startDetached starts cmd.exe without window
-
- Closed
-